fix(select): prevent width overflow

--- a/packages/components/base/src/select/styles/index.module.scss
+++ b/packages/components/base/src/select/styles/index.module.scss
@@ -10,6 +10,7 @@
   align-items: flex-start;
   justify-self: unset;
   cursor: pointer;
+  max-width: 100%;
 
   &.full_width {
     @include form-field.form-field-input-full-width;
@@ -83,4 +84,5 @@
   pointer-events: none;
   height: 0;
   overflow: hidden;
+  max-width: 100%;
 }
